--- a/index.html
+++ b/index.html
@@ -132,12 +132,31 @@
                 - Salt as required<br>
             </p>
         </div>
+        <div class="recipe1">
+            <img class="image" src="https://i.pinimg.com/originals/a4/70/fe/a470fefcda1f459f3d9d5c3b5aa1a502.jpg" draggable="false">
+            <h3>Gulab Jamun</h3>
+            <p class="description">Gulab Jamun is a sweet confectionery or dessert, originating in Persia and then later introduced to the Indian. These are deep fired sweet balls made with ingrediants like khoya which is then dipped in sugar syrup.</p>
+            <div class="whitebg"></div>
+            <p class="ingredients">Ingredients: <br>
+                - 1/2 cup khoya <br>
+                - maida <br>
+                - Refined oil as required<br>
+                - sugar<br>
+                - 1 or 2 elaichi<br>
+                - milk powder<br>
+                - cashew (if wanted)<br>
+            </p>
+        </div>
     </div>
-    <div class="search">
-        <p class="search_text">Search recipes, ingredients, etc...</p>
-        <img class="search_image" src="https://cdn-icons-png.flaticon.com/512/54/54481.png" draggable="false">
-    </div>
-    <!-- <img class="background_img" src="https://www.hdwallpapers.in/download/starry_sky_during_nighttime_hd_black_aesthetic-1920x1080.jpg" draggable="false"> -->
+    <form id="form" role="search">
+        <input type="search" id="query" name="q"
+         placeholder="Search recipies, ingredients, etc..."
+         aria-label="Search through site content">
+        <button><img class="search_image" src="https://cdn-icons-png.flaticon.com/512/54/54481.png" draggable="false"></button>
+    </form>
+    <button class="signup" onclick="window.location.href = 'signup.html';">
+        <p class="signup_">Signup</p>
+    </button>
     <div id="image_track" data-mouse-down-at="0"></div>
     <script src="index.js"></script>
 </body>
